<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="identifo">Identifo</string>
    <string name="login">Login</string>
    <string name="loginWithEmail">Sign in with email</string>
    <string name="loginWithPhoneNumber">Sign in with a phone number</string>
    <string name="phoneNumberHint">Phone number</string>
    <string name="phoneNumberInvalid">Invalid phone number</string>
    <string name="loginWithGmail">Sign in with Gmail</string>
    <string name="loginWithFacebook">Sign in with Facebook</string>
    <string name="loginWithTwitter">Sign in with Twitter</string>
    <string name="register">Register</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="singUp">Sing up</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="recoveryPassword">Recovery password</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="weWillSendPasswordResetLink">We will send to you a password reset link.</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="passwordsDoNotMatch">The password and confirm password fields do not match.</string>
    <string name="userAgreement">User Agreement</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="userAgreementNotice">By continuing, you are indicating that you accept our </string>
    <string name="userAgreementNoticeAnd"> and </string>
    <string name="pleaseEnterTheCode">Please enter the code</string>
    <string name="resendTheCodeIn">Resend the code in %s</string>
    <string name="enterTheCodeSentToYou">Enter the code sent to your phone number</string>
    <string name="theCodeHasBeenSent">The code has been sent to %s.</string>
    <string name="sendTheCode">Resend the code</string>
    <string name="resetThePassword">Reset the password</string>
    <string name="resetPasswordEmail">Reset password for email</string>
    <string name="weSentYouALink">We sent you the link to reset your password</string>
    <string name="followTheLinkYouReceived">Follow the link you received to %s.</string>
    <string name="backToLogin">Back to login</string>
    <string name="enterPhoneNumber">Enter your phone number</string>
    <string name="enterCredentials">Enter your credentials</string>

    <!-- public shown resources -->
    <string name="identifo_app_name" />
    <string name="identifo_facebook_app_id" />
    <string name="identifo_facebook_protocol_scheme" />
    <string name="identifo_google_api_key" />
    <string name="identifo_twitter_key" />
    <string name="identifo_twitter_secret" />

    <!-- sdk specific resources -->
    <string name="app_name">@string/identifo_app_name</string>
    <string name="facebook_app_id">@string/identifo_facebook_app_id</string>
    <string name="fb_login_protocol_scheme">@string/identifo_facebook_protocol_scheme</string>
    <string name="google_api_key">@string/identifo_google_api_key</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">@string/identifo_twitter_key</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">@string/identifo_twitter_secret</string>
</resources>