<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textViewResetPasswordTitle"
        style="@style/IdentifoPrimaryBoldTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:gravity="center|left"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:text="@string/recoveryPassword"
        android:textSize="@dimen/identifoText18"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewBackArrow"
        app:layout_constraintTop_toTopOf="@+id/imageViewBackArrow" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFieldResetPasswordEmail"
        style="@style/IdentifoBorderedInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/resetPasswordEmail"
        app:layout_constraintBottom_toTopOf="@+id/buttonResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackArrow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextResetPasswordEmail"
            style="@style/IdentifoBorderedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResetPassword"
        style="@style/IdentifoPrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/resetThePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewEnterEmail"
        style="@style/IdentifoPrimaryBoldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/enterYourEmail"
        android:textSize="@dimen/identifoText24"
        app:layout_constraintBottom_toTopOf="@+id/textViewWeWillSendYouLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPasswordTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewWeWillSendYouLink"
        style="@style/IdentifoSecondaryRegularTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/weWillSendPasswordResetLink"
        android:textSize="@dimen/identifoText14"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFieldResetPasswordEmail"
        app:layout_constraintEnd_toEndOf="@+id/textViewEnterEmail"
        app:layout_constraintStart_toStartOf="@+id/textViewEnterEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>