<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCompanyGreetings">

            <Button
                android:id="@+id/buttonLoginWithUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/identifoProviders_sign_in_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/loginWithEmail"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonLoginWithPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/identifoProviders_sign_in_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/loginWithPhoneNumber"
                android:visibility="gone" />

            <View
                android:id="@+id/viewSeparator"
                android:background="?attr/colorOnSurface"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonLoginWithGoogle"
                style="?attr/widgetButton2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/identifoProviders_sign_in_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/loginWithGmail"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonLoginWithFacebook"
                style="?attr/widgetButton2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/identifoProviders_sign_in_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/loginWithFacebook"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonLoginWithTwitter"
                style="?attr/widgetButton2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/identifoProviders_sign_in_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/loginWithTwitter"
                android:visibility="gone">

            </Button>

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/buttonLoginWithTwitterNative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/buttonLoginWithFacebookNative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/identifoLogoWidth"
            android:layout_height="@dimen/identifoLogoHeight"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewCompanyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIdentifo"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewUserAgreement"
            style="?attr/widgetMaterialText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/privacyPolicy"
            android:textAppearance="?attr/textAppearanceCaption2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutButtons"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/userAgreementNotice" />

        <ImageView
            android:id="@+id/imageViewShield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewIdentifo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shield"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/textViewIdentifo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/identifo"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/size18"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewShield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewShield"
            app:layout_constraintTop_toTopOf="@+id/imageViewShield"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewCompanyName"
            style="?attr/widgetMaterialText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceTitle1"
            app:layout_constraintBottom_toTopOf="@+id/textViewCompanyGreetings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Company name" />

        <TextView
            android:id="@+id/textViewCompanyGreetings"
            style="?attr/widgetMaterialText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:textAppearance="?attr/textAppearanceCaption2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
            app:layout_constraintEnd_toEndOf="@+id/textViewCompanyName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textViewCompanyName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Greetings text here" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
